[Ashutosh] Add: Added a feature which enables user to upload their profile picture
